Attr selector content filter.

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -20,5 +20,7 @@
     <div ng-include="'./part.htm'" data-prepend>
         <h5>Content should be above this heading</h5>
     </div>
+    <h3>This content should be skipped.</h3>
+    <ng-include src="some.var"></ng-include>
 </body>
 </html>
