--- a/src/test/index.html
+++ b/src/test/index.html
@@ -20,6 +20,10 @@
     <div ng-include="'./part.htm'" data-prepend>
         <h5>Content should be above this heading</h5>
     </div>
+    <h3>Attr data should be replaced with a correct one.</h3>
+    <div ng-include="'./doge.gif'" data-attr>
+        :)
+    </div>
     <h3>This content should be skipped.</h3>
     <ng-include src="some.var"></ng-include>
 </body>
