Add possibility to receive previous value when serializing result, to build complex attribute.

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -26,5 +26,8 @@
     </div>
     <h3>This content should be skipped.</h3>
     <ng-include src="some.var"></ng-include>
+
+    <h3>This div will have processed several times style attribute.</h3>
+    <div style="background-image: url(doge.gif); --custom-var: url(forest.gif)"></div>
 </body>
 </html>
